--- a/authentication/templates/base.html
+++ b/authentication/templates/base.html
@@ -19,6 +19,11 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'Manga:index' %}">Manga</a>
+      </li>
+    </ul>
     <ul class="navbar-nav ml-auto">
 
       {# Will know if user is logged in or not#}
