--- a/authentication/templates/base_profile.html
+++ b/authentication/templates/base_profile.html
@@ -8,51 +8,47 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'CSS/base.css'%}">
+    <link rel="stylesheet" href="../static/CSS/profile2.css">
     <title>OKManga</title>
   </head>
   <body>
   <div class="wrap">
-
-  <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <span class="title">Manga</span>
-    <a class="navbar-brand" href="{% url 'home'  %}">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-   <ul class="navbar-nav ml-auto">
-
-    {# Will know if user is logged in or not#}
-    {% if user.is_authenticated %}
-
-    <li class="nav-item active">
-      <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-    </li>
-    <li class="nav-item active">
-      <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
-    </li>
-
-
-
-    {% else %}
-    <li class="nav-item active">
-      <a class=" nav-link" href="{% url 'login' %}">Login</a>
-    </li>
-
-      <li class="nav-item active">
-      <a class="nav-link" href="{% url 'register' %}">Register</a>
-    </li>
-
-    {% endif%}
-
-  </ul>
-
-</div>
-</nav>
+    <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <span class="title">Manga</span>
+      <a class="navbar-brand" href="{% url 'home'  %}">Home</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+  
+        {# Will know if user is logged in or not#}
+        {% if user.is_authenticated %}
+  
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
+        </li>
+  
+        {% else %}
+        <li class="nav-item active">
+          <a class=" nav-link" href="{% url 'login' %}">Login</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'register' %}">Register</a>
+        </li>
+  
+        {% endif%}
+  
+        </ul>
+  
+      </div>
+    </nav>
     <br/>
-
+  
     <div class="wrapbody">
       <div class ="container">
         {% if messages %}
@@ -72,6 +68,8 @@
       </div>
     </div>
   </div>
+  
+   
 
     
 
@@ -81,6 +79,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
+
   <script>
     document.addEventListener("DOMContentLoaded", function(){
     window.addEventListener('scroll', function() {
@@ -97,4 +96,5 @@
     });
     }); 
 </script>
+
 </html>
