--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -1,28 +1,23 @@
-{% extends 'base.html' %}
-
+{% extends 'base_profile.html' %}
 {% block content %}
+	<h1 class ="text-center"> Sign In</h1>
 
-<h2 class ="text-center"> Login</h2>
-
-<div class = "col-md-6 offset-md-3"> 
-	<form method ="POST">
-		
-		{% csrf_token %}
-
-	  <div class="form-group">
-
-	    <input type="text" class="form-control" placeholder="Enter Username" name = "username">
-
-	  </div>
-	  <div class="form-group">
-
-	    <input type="password" class="form-control"  placeholder="Enter Password" name="password"> 
-	  </div>
-	 
-
-	  <button type="submit" class="btn btn-secondary">Login</button>
-	</form>
-
-</div>
+	<div class = "col-md-6 offset-md-3 "> 
+		<form method ="POST" class="form_login">		
+			{% csrf_token %}
+		  <div class="form-group ">
+			<span >Username</span>
+			<input type="text" class="form-control" placeholder="Enter Username" name = "username">
+		  </div>
+		  <div class="form-group">
+			<span >Password</span>
+			<input type="password" class="form-control"  placeholder="Enter Password" name="password"> 
+		  </div> 
+	
+		  <button type="submit" class="btn btn-secondary">Login</button>
+		</form>
+	
+	</div>
+	
 
 {% endblock %}
