--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_profile.html' %}
 
 {% block content %}
 
@@ -6,33 +6,25 @@
 
 <div class = "col-md-6 offset-md-3"> 
 
-<form method="POST" action="{% url 'register' %}">
+	<form method="POST" action="{% url 'register' %}" class="form_register">
 		{% csrf_token %}
 
 		{% if form.errors %}
 		<div class="alert alert-danger alart-dismissable" role ="alert">
-                <button class="close" data-dismiss="alert">
-                    <small><sup>x</sup></small>
-                  </button>
+			<button class="close" data-dismiss="alert">
+				<small><sup>x</sup></small>
+				</button>
                
-
-               {% for field in form%}
+            {% for field in form%}
                	{% if field.errors%}
                		{{field.errors}}
                	{% endif%}
+            {% endfor %}
 
-               	{% endfor %}
-
-
-              </div>
-
-
+        </div>
 
 		{% endif %}
-
-
 		{{ form.as_p }}
-
 
 		<input type="submit" value="Register" class=" btn btn-secondary">
 	</form>
