--- a/authentication/static/CSS/base.css
+++ b/authentication/static/CSS/base.css
@@ -11,13 +11,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
     font-size: 18px;
     position:fixed;
 }
-/* .wrapbody
-{
-    display: flex;   
-    margin: 150px 0;
-    justify-content: center;
-    font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-} */
+
 nav .title
 {
     color: white;
@@ -28,15 +22,12 @@ nav .title
     text-shadow: 5px -5px 5px rgb(140, 197, 255);
 }
 
-/* .container
+.container
 {
-    background-color: rgb(236, 243, 243);
-    border: 1px solid #ccc;
-    padding: 50px 0;
-    border-radius: 10px;
-    box-shadow: 0 0 2px 1px rgb(25, 23, 26);
-    
-    margin: 0 30px;
-    width: 800px;
-} */
+    margin: 100px 0 30px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    width: 50%;
+}
 
