--- a/Manga/templates/detail.html
+++ b/Manga/templates/detail.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
@@ -18,10 +22,22 @@
       <nav class="main-nav row">      
         <div class="my-auto p-3">
           <a href="{% url 'Manga:index' %}">Trang chủ</a>
-          <a href="#">Thể loại</a> 
-          <a href="#">Gần đây</a>
-          <a href="#">Hot</a>
-          <a href="#">Tất cả</a>        
+          <div class="d-inline dropdown show">
+            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Thể loại
+            </a>
+          
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <div class="d-flex flex-wrap">
+                {% for cate in all_categories %}
+                <a href="{% url 'Manga:category' cate.id %}">{{cate.category}}</a>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+          <a href="{% url 'Manga:recent' %}">Gần đây</a>
+          <a href="{% url 'Manga:hot' %}">Hot</a>
+          <a href="{% url 'Manga:all' %}">Tất cả</a>        
         </div>          
       </nav>
       <nav class="sub-nav row">
@@ -43,7 +59,7 @@
     <section class="main-container" >
         <div class="row py-4">
             <div class="col-sm-5 row">
-                <a class="mx-auto" href="{% url 'Manga:view' chapters.first.id %}"><img class="h-100 thumbnail" src="{{manga.thumbnail}}" alt="{{manga.name}}"/></a>
+                <a class="mx-auto" href="{% url 'Manga:view' chapters.last.id %}"><img class="h-100 thumbnail" src="{{manga.thumbnail}}" alt="{{manga.name}}"/></a>
             </div>
             <div class="col-sm-5">
                 <h1>{{manga.name}}</h1>
@@ -59,7 +75,10 @@
                 <p><span class="text-muted">Lượt xem: </span> {{manga.views}}</p>
                 <p><span class="text-muted">Số chương: </span> {{manga.chapters_number}}</p>
                 <p><span class="text-muted">Cập nhật lúc: </span> {{manga.updated_at}}</p>
-                <a class="btn btn-info m-2" href="{% url 'Manga:view' chapters.first.id %}">Đọc từ đầu</a><a class="btn btn-success m-2" href="{% url 'Manga:view' chapters.last.id %}">Đọc chương mới nhất</a>
+                {% if manga.summary %}
+                <p><span class="text-muted">Tóm tắt: </span> {{manga.summary}}</p>
+                {% endif %}
+                <a class="btn btn-info m-2" href="{% url 'Manga:view' chapters.last.id %}">Đọc từ đầu</a><a class="btn btn-success m-2" href="{% url 'Manga:view' chapters.first.id %}">Đọc chương mới nhất</a>
             </div>
         </div>
         <div class="row">
