--- a/Manga/templates/index.html
+++ b/Manga/templates/index.html
@@ -6,7 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  
   <link rel="stylesheet" href="{% static 'style.css' %}">
+  <script>
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+  </script>
 </head>
 <body>
   <div class="wrapper">
@@ -18,10 +28,22 @@
       <nav class="main-nav row">      
         <div class="my-auto p-3">
           <a href="{% url 'Manga:index' %}">Trang chủ</a>
-          <a href="#">Thể loại</a> 
-          <a href="#">Gần đây</a>
-          <a href="#">Hot</a>
-          <a href="#">Tất cả</a>        
+          <div class="d-inline dropdown show">
+            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Thể loại
+            </a>
+          
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <div class="d-flex flex-wrap">
+                {% for cate in categories %}
+                <a href="{% url 'Manga:category' cate.id %}">{{cate.category}}</a>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+          <a href="{% url 'Manga:recent' %}">Gần đây</a>
+          <a href="{% url 'Manga:hot' %}">Hot</a>
+          <a href="{% url 'Manga:all' %}">Tất cả</a>        
         </div>          
       </nav>
       <nav class="sub-nav row">
@@ -44,14 +66,30 @@
       <div class="location" id="home">
           <h1 id="home">Gần đây mới cập nhật</h1>
           <div class="box">
-            {% if all_manga %}
-              {% for manga in all_manga %}
-                <a href="{% url 'Manga:detail' manga.id %}"><img src="{{manga.thumbnail}}" alt="{{manga.name}}"></a>
+            {% if recent %}
+              {% for manga in recent %}
+                <a href="{% url 'Manga:detail' manga.id %}" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<h5>{{manga.name}}</h5><p>{{manga.summary}}</p>">
+                  <img src="{{manga.thumbnail}}" alt="{{manga.name}}" />
+                </a>
               {% endfor %}
             {% else %}
               <p>Truyện chưa được cập nhật</p>
             {% endif %}
           </div>
+
+          <h1 class="pt-5" id="home">Nhiều lượt xem nhất</h1>
+          <div class="box">
+            {% if hot %}
+              {% for manga in hot %}
+                <a href="{% url 'Manga:detail' manga.id %}" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<h5>{{manga.name}}</h5><p>{{manga.summary}}</p>">
+                  <img src="{{manga.thumbnail}}" alt="{{manga.name}}" />
+                </a>
+              {% endfor %}
+            {% else %}
+              <p>Truyện chưa được cập nhật</p>
+            {% endif %}
+          </div>
+
       </div>
     </section>
     <!-- END OF MAIN CONTAINER -->
