--- a/authentication/templates/edit_profile.html
+++ b/authentication/templates/edit_profile.html
@@ -4,9 +4,9 @@
 
     <h2 class="text-center"> Edit Profile </h2>
 
-
-    <form method="POST" action="{% url 'authentication:edit_profile' %}" class="form_edit">
+    <form method="POST" action="{% url 'authentication:edit_profile' %}" class="form_edit" enctype="multipart/form-data">
         {% csrf_token %}
+        
         {% if form.errors %}
             <div class="alert alert-danger alart-dismissable" role="alert">
                 <button class="close" data-dismiss="alert">
@@ -14,6 +14,7 @@
                         <sup>x</sup>
                     </small>
                 </button>
+                
                 {% for field in form %}
                     {% if field.errors %}
                         {{ field.errors }}
@@ -21,7 +22,23 @@
                 {% endfor %}
             </div>
         {% endif %}
+        <p>
+            <div class="avatar-wrapper">
+                <img src="/{{avatar_img}}" class="profile-pic rounded-circle shadow-4" name="avatar_img"
+                style="width: 150px; " alt="Avatar" />
+                <div class="upload-button">
+                    <i class="fa fa-arrow-circle-up" aria-hidden="true"></i>
+                </div>
+                
+                           
+            </div>
+           
+                     
+        </p>
+        {{ avatar_form.as_p }}
         {{ form.as_p }}
+
+
         <input type="submit" value="Edit Profile" class=" btn btn-secondary">
         <p>
             <small>
