--- a/usermanga/templates/add_manga.html
+++ b/usermanga/templates/add_manga.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"
+            integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script type="module">
-        import {uploadThumbnail, getImgUrl} from  "/static/js/add_manga.js"
+        import {uploadThumbnail, getImgUrl} from "/static/js/add_manga.js"
 
         function readURL(input) {
             if (input.files && input.files[0]) {
@@ -41,48 +47,88 @@
             if (url === "failed")
                 return false;
             if (url === "")
-                alert("Processing img");
-            document.getElementById("thumbnail").value = url;
+                return false;
+            document.getElementById("thumbnailImg").value = url;
             return true;
         }
     </script>
 </head>
 <body>
-<div class="container mt-3">
-    <form method="post" onsubmit="return setImg()">
-    {% csrf_token %}
-        <div class="form-group">
-            <img id="thumbnail" src="#" alt="Thumb nail img"/>
+
+<div class="wrapper">
+    <!-- HEADER -->
+    <header>
+        <div class="netflixLogo">
+            <a id="logo" class="navbar-brand" href="{% url 'Manga:index' %}"><img src="{% static 'img/logo.png' %}"
+                                                                                  alt="MyManga logo"></a>
         </div>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name="name" aria-describedby="mangaName"
-                   placeholder="Enter manga's name" required>
-        </div>
-        <div class="form-group">
-            <label for="author">Author</label>
-            <input type="text" class="form-control" id="author" name="author" placeholder="Enter author's name"
-                   required>
-        </div>
-        <div class="form-group">
-            <label for="category">Category</label>
-            <select class="form-select" id="category" name="category" required>
-                {% for category in categories %}
-                    <option value= {{ category.id }}> {{ category.category }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="file-input">Thumbnail</label>
-            <input class="file-upload" type="file" id="file-input" name="file-input" onchange="postImg(this);"
-                   accept="image/jpeg" required>
-            <input type="hidden" name="thumbnail" id="thumbnail" value="">
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Add">
-            <a href="list_user_manga.html" class="btn btn-cancel">Cancel</a>
-        </div>
-    </form>
+        <nav class="main-nav row">
+            <div class="my-auto p-3">
+                <a href="{% url 'Manga:index' %}">Trang chủ</a>
+                <a href="#">Thể loại</a>
+                <a href="#">Gần đây</a>
+                <a href="#">Hot</a>
+                <a href="#">Tất cả</a>
+            </div>
+        </nav>
+        <nav class="sub-nav row">
+            <div class="my-auto">
+                <a href="#"><i class="fas fa-search sub-nav-logo"></i></a>
+                <a href="#"><i class="fas fa-bell sub-nav-logo"></i></a>
+                {% if request.user.is_authenticated %}
+                    {{ request.user }}
+                    <a href="{% url 'authentication:logout' %}"><i class="fas fa-power-off sub-nav-logo"></i> Đăng xuất</a>
+                {% else %}
+                    <a href="{% url 'authentication:register' %}">Đăng ký</a>
+                    <a href="{% url 'authentication:login' %}">Đăng nhập</a>
+                {% endif %}
+            </div>
+        </nav>
+    </header>
+
+    <div class="container mt-3">
+        <form method="post" onsubmit="return setImg()">
+            {% csrf_token %}
+            <div class="form-group">
+                <img id="thumbnail" src="#" alt="Thumb nail img"/>
+            </div>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" name="name" aria-describedby="mangaName"
+                       placeholder="Enter manga's name" required>
+            </div>
+            <div class="form-group">
+                <label for="author">Author</label>
+                <input type="text" class="form-control" id="author" name="author" placeholder="Enter author's name"
+                       required>
+            </div>
+            <div class="form-group">
+                <label for="category">Category</label>
+                <select class="form-select" id="category" name="category" required>
+                    {% for category in categories %}
+                        <option value= {{ category.id }}> {{ category.category }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="file-input">Thumbnail</label>
+                <input class="file-upload" type="file" id="file-input" name="file-input" onchange="postImg(this);"
+                       accept="image/jpeg" required>
+                <input type="hidden" name="thumbnailImg" id="thumbnailImg">
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="Add">
+                <a href="list_user_manga.html" class="btn btn-cancel">Cancel</a>
+            </div>
+        </form>
+    </div>
+    <!-- FOOTER -->
+    <footer>
+        <p>&copy 2022 MyManga Django Project</p>
+        <p>Van Huu An - 19TCLC_DT3</p>
+        <p>Bui Kim Phat - 19TCLC_DT3</p>
+        <p>Dao Danh Thai</p>
+    </footer>
 </div>
 </body>
 </html>
