--- a/usermanga/templates/base.html
+++ b/usermanga/templates/base.html
@@ -1,10 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="utf-8"/>
+    <title>My Manga</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"
+            integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-$END$
+<div class="wrapper">
+    <!-- HEADER -->
+    <header>
+        <div class="netflixLogo">
+            <a id="logo" class="navbar-brand" href="{% url 'Manga:index' %}"><img src="{% static 'img/logo.png' %}"
+                                                                                  alt="MyManga logo"></a>
+        </div>
+        <nav class="main-nav row">
+            <div class="my-auto p-3">
+                <a href="{% url 'Manga:index' %}">Trang chủ</a>
+                <a href="#">Thể loại</a>
+                <a href="#">Gần đây</a>
+                <a href="#">Hot</a>
+                <a href="#">Tất cả</a>
+            </div>
+        </nav>
+        <nav class="sub-nav row">
+            <div class="my-auto">
+                <a href="#"><i class="fas fa-search sub-nav-logo"></i></a>
+                <a href="#"><i class="fas fa-bell sub-nav-logo"></i></a>
+                {% if request.user.is_authenticated %}
+                    {{ request.user }}
+                    <a href="{% url 'authentication:logout' %}"><i class="fas fa-power-off sub-nav-logo"></i> Đăng xuất</a>
+                {% else %}
+                    <a href="{% url 'authentication:register' %}">Đăng ký</a>
+                    <a href="{% url 'authentication:login' %}">Đăng nhập</a>
+                {% endif %}
+            </div>
+        </nav>
+    </header>
+</div>
 </body>
 </html>
