--- a/usermanga/templates/edit_manga.html
+++ b/usermanga/templates/edit_manga.html
@@ -1,10 +1,179 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="utf-8"/>
+    <title>My Manga</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"
+            integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <script type="module">
+        import {uploadThumbnail, getImgUrl} from "/static/js/add_manga.js"
+
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#thumbnail').attr('src', e.target.result);
+                    console.log("Haha")
+                };
+                reader.readAsDataURL(input.files[0]);
+                console.log("1");
+                return uploadThumbnail(input.files[0])
+            }
+        }
+
+        function getImg() {
+            return getImgUrl();
+        }
+
+
+        window.getImg = getImg;
+        window.readURL = readURL;
+    </script>
+    <script>
+        function postImg(input) {
+            window.readURL(input)
+        }
+
+        function setImg() {
+            let url = window.getImg();
+            if (url === "failed")
+                return false;
+            if (url === "")
+                return false;
+            document.getElementById("thumbnailImg").value = url;
+            return true;
+        }
+    </script>
+
 </head>
 <body>
-$END$
+<div class="wrapper">
+    <!-- HEADER -->
+    <header>
+        <div class="netflixLogo">
+            <a id="logo" class="navbar-brand" href="{% url 'Manga:index' %}"><img src="{% static 'img/logo.png' %}"
+                                                                                  alt="MyManga logo"></a>
+        </div>
+        <nav class="main-nav row">
+            <div class="my-auto p-3">
+                <a href="{% url 'Manga:index' %}">Trang chủ</a>
+                <a href="#">Thể loại</a>
+                <a href="#">Gần đây</a>
+                <a href="#">Hot</a>
+                <a href="#">Tất cả</a>
+            </div>
+        </nav>
+        <nav class="sub-nav row">
+            <div class="my-auto">
+                <a href="#"><i class="fas fa-search sub-nav-logo"></i></a>
+                <a href="#"><i class="fas fa-bell sub-nav-logo"></i></a>
+                {% if request.user.is_authenticated %}
+                    {{ request.user }}
+                    <a href="{% url 'authentication:logout' %}"><i class="fas fa-power-off sub-nav-logo"></i> Đăng xuất</a>
+                {% else %}
+                    <a href="{% url 'authentication:register' %}">Đăng ký</a>
+                    <a href="{% url 'authentication:login' %}">Đăng nhập</a>
+                {% endif %}
+            </div>
+        </nav>
+    </header>
+    <!-- END OF HEADER -->
+
+    <!-- MAIN CONTAINER -->
+    <div class="container">
+        <h1>Edit Profile</h1>
+        <hr>
+        <div class="row">
+            <!-- left column -->
+            <div class="col-md-3">
+                <div class="text-center">
+                    <img src="{{ manga.thumbnail }}" id="thumbnail" class="avatar img-circle" alt="avatar">
+                    <input class="form-control" type="file" id="file-input" name="file-input" onchange="postImg(this);"
+                       accept="image/jpeg">
+                </div>
+            </div>
+
+            <!-- edit form column -->
+            <div class="col-md-9 personal-info">
+                <h3>Manga info</h3>
+
+                <form method="post" class="form-horizontal" role="form" onsubmit="setImg()" action=" {% url "usermanga:update" %}">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label">Name:</label>
+                        <div class="col-lg-8">
+                            <input class="form-control" type="text" id="name" name="name" required value={{ manga.name }} >
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label">Author:</label>
+                        <div class="col-lg-8">
+                            <input class="form-control" type="text" id="author" name="author" required value={{ manga.author }}>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label">Description:</label>
+                        <div class="col-lg-8">
+                            <input class="form-control" type="text" id="description" name="description" required value={{ manga.description }}>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label">Status:</label>
+                        <div class="col-lg-8">
+                            <input class="form-control" type="text" id="status" name="status" required value={{ manga.Status }}>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label">Category:</label>
+                        <div class="col-lg-8">
+                            <div class="ui-select">
+                                <select class="form-control" id="category" name="category" required>
+                                    {% for category in categories %}
+                                        {% if category == manga.category.name %}
+                                            <option selected="selected" value= {{ category.id }}> {{ category.category }}</option>
+                                        {% else %}
+                                            <option value= {{ category.id }}> {{ category.category }}</option>
+                                        {% endif %}
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <p><span class="text-muted">Lượt xem: </span> {{manga.views}}</p>
+                    <p><span class="text-muted">Số chương: </span> {{manga.chapters_number}}</p>
+                    <p><span class="text-muted">Cập nhật lúc: </span> {{manga.updated_at}}</p>
+                    <input type="hidden" id="mangaId" name="mangaId" value= {{ manga.id }}>
+                    <input type="hidden" name="thumbnailImg" id="thumbnailImg">
+                    <div class="form-group">
+                        <label class="col-md-3 control-label"></label>
+                        <div class="col-md-8">
+                            <input type="submit" class="btn btn-primary" value="Save Changes">
+                            <span></span>
+                            <a href= "{% url "usermanga:home"  %}" class="btn btn-default">Cancel</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <!-- END OF MAIN CONTAINER -->
+
+    <!-- FOOTER -->
+    <footer>
+        <p>&copy 2022 MyManga Django Project</p>
+        <p>Van Huu An - 19TCLC_DT3</p>
+        <p>Bui Kim Phat - 19TCLC_DT3</p>
+        <p>Dao Danh Thai</p>
+    </footer>
+</div>
 </body>
 </html>
