- tạo page lịch sử đọc truyện

--- a/Manga/templates/all.html
+++ b/Manga/templates/all.html
@@ -43,7 +43,8 @@
           </div>
           <a href="{% url 'Manga:recent' %}">Gần đây</a>
           <a href="{% url 'Manga:hot' %}">Hot</a>
-          <a href="{% url 'Manga:all' %}">Tất cả</a>        
+          <a href="{% url 'Manga:all' %}">Tất cả</a>   
+          <a href="{% url 'Manga:list_history' %}">Lịch sử</a>      
         </div>          
       </nav>
       <nav class="sub-nav row">
@@ -85,7 +86,7 @@
       <p>&copy 2022 MyManga Django Project</p>
       <p>Van Huu An - 19TCLC_DT3</p>
       <p>Bui Kim Phat - 19TCLC_DT3</p>
-      <p>Dao Danh Thai</p>
+      <p>Dao Danh Thai - 19TCLC_DT1</p>
     </footer>
   </div>
 </body>
