--- a/Manga/templates/history.html
+++ b/Manga/templates/history.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   
-  <link rel="stylesheet" href="{% static 'style.css' %}">
+  <link rel="stylesheet" href="{% static 'history.css' %}">
   <script>
     $(function () {
       $('[data-toggle="tooltip"]').tooltip()
@@ -43,8 +43,8 @@
           </div>
           <a href="{% url 'Manga:recent' %}">Gần đây</a>
           <a href="{% url 'Manga:hot' %}">Hot</a>
-          <a href="{% url 'Manga:all' %}">Tất cả</a>      
-          <a href="{% url 'Manga:list_history' %}">Lịch sử</a>   
+          <a href="{% url 'Manga:all' %}">Tất cả</a>   
+          <a href="{% url 'Manga:list_history' %}">Lịch sử</a>       
         </div>          
       </nav>
       <nav class="sub-nav row">
@@ -65,17 +65,27 @@
     <!-- MAIN CONTAINER -->
     <section class="main-container" >
       <div class="location" id="home">
-          <h1 id="home">Truyện mới cập nhật gần đây</h1>
-          <div class="box">
-            {% if all_manga %}
-              {% for manga in all_manga %}
-                <a href="{% url 'Manga:detail' manga.id %}" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<h5>{{manga.name}}</h5><p>{{manga.summary}}</p>">
-                  <img src="{{manga.thumbnail}}" alt="{{manga.name}}" />
-                </a>
+          <h1 id="home" >Lịch sử đọc truyện gần nhất</h1>
+          <div class="list"> 
+            <table class="table" >
+                <thead class="thead-dark">
+                    <tr>                      
+                        <th scope="col"> Chương và tên truyện </th>
+                        <th scope="col">#</th>
+                    </tr>
+                </thead>
+ 
+                {% for his in list_history %}
+                <tbody>
+                    <tr>                      
+                        <td> {{his.chapter}} </td>
+                        <td> <a href="{% url 'Manga:view' his.chapter.id %}"> Đọc tiếp </a> </td>
+                    </tr>
+                </tbody>
+                               
               {% endfor %}
-            {% else %}
-              <p>Truyện chưa được cập nhật</p>
-            {% endif %}
+            </table>   
+          
           </div>
       </div>
     </section>
