--- a/Manga/templates/search.html
+++ b/Manga/templates/search.html
@@ -25,7 +25,7 @@
     <!-- MAIN CONTAINER -->
     <section class="main-container" >
       <div class="location" id="home">
-          <h1 id="home">Truyện mới cập nhật gần đây</h1>
+          <h1 id="home">Tìm kiếm cho: {{search}}</h1>
           <div class="box">
             {% if all_manga %}
               {% for manga in all_manga %}
