--- a/authentication/templates/base_profile.html
+++ b/authentication/templates/base_profile.html
@@ -14,8 +14,10 @@
   <body>
   <div class="wrap">
     <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <span class="title">Manga</span>
-      <a class="navbar-brand" href="{% url 'Manga:index' %}">Home</a>
+      <a href="/" class="title">Manga</a>
+      {% if user.is_authenticated %}
+      <a class="navbar-brand" href="{% url 'Manga:index' %}">Đọc truyện</a>
+      {% endif %}
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
